# OpenLogi

./: AGENTS.md  CHANGELOG.md  Cargo.toml  FIXDRY.md  IMPROVEMENTS.md  README.md  README_CN.md  devenv.nix  release-plz.toml
.github/workflows/: build.yml  ci.yml  crowdin.yml  release.yml  windows-sign-dryrun.yml
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/: Cargo.toml
crates/openlogi-agent-core/src/: bindings.rs  capture_plan.rs  device_order.rs  dpi.rs  event_monitor.rs  hardware.rs  hook_runtime.rs  ipc.rs  lib.rs  orchestrator.rs  receiver_access.rs  ring.rs  transport.rs
crates/openlogi-agent-core/src/watchers/: gesture.rs  inventory.rs  keyboard.rs  mod.rs
crates/openlogi-agent-core/tests/: wire_format.rs
crates/openlogi-agent/macos/: Info.plist
crates/openlogi-agent/src/: main.rs  pairing.rs  self_restart.rs  server.rs  tray_windows.rs
crates/openlogi-assets/: CHANGELOG.md  Cargo.toml
crates/openlogi-assets/src/: error.rs  http.rs  index.rs  lib.rs  manifest.rs  metadata.rs  source.rs
crates/openlogi-camera/: Cargo.toml
crates/openlogi-camera/src/: capture.rs  capture_types.rs  capture_windows.rs  controls.rs  lib.rs  macos.rs  uvc.rs  uvc_windows.rs
crates/openlogi-cli/: CHANGELOG.md  Cargo.toml
crates/openlogi-cli/src/: lib.rs
crates/openlogi-cli/src/cmd/: camera.rs  diag.rs  list.rs  mod.rs  snapshot.rs
crates/openlogi-cli/src/cmd/assets/: sync.rs
crates/openlogi-cli/src/cmd/diag/: battery.rs  call.rs  fsb.rs  hidden.rs  hidsniff.rs  lighting.rs  mod.rs  pair.rs  panel.rs  profiles.rs  rawinput.rs  smartshift.rs  windows_pair.rs
crates/openlogi-core/: CHANGELOG.md  Cargo.toml
crates/openlogi-core/examples/: inject_action.rs
crates/openlogi-core/src/: binding.rs  brand.rs  config.rs  device.rs  diagnostics.rs  paths.rs  single_instance.rs
crates/openlogi-core/src/config/: device.rs  settings.rs
crates/openlogi-core/tests/: device_tests.rs
crates/openlogi-gui/: Cargo.toml  build.rs
crates/openlogi-gui/bundle/gui-dev/: Info.plist
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/resources/windows/: openlogi.rc
crates/openlogi-gui/src/: accessibility_watcher.rs  app.rs  app_assets.rs  app_menu.rs  app_watcher.rs  diagnostics.rs  hook_runtime.rs  i18n.rs  ipc_client.rs  main.rs  ring.rs  state.rs  theme.rs  window_chrome.rs  windows.rs
crates/openlogi-gui/src/app/: detail.rs  home.rs  status.rs  widgets.rs
crates/openlogi-gui/src/asset/: glow.rs  images.rs  mod.rs  sync.rs
crates/openlogi-gui/src/components/: camera_controls.rs  camera_preview.rs  carousel.rs  device_carousel.rs  device_read.rs  dpi_panel.rs  lighting_panel.rs  mod.rs  profiles_panel.rs  smartshift_panel.rs
crates/openlogi-gui/src/data/: mouse_buttons.rs
crates/openlogi-gui/src/keyboard_model/: editors.rs  function_row.rs  mod.rs
crates/openlogi-gui/src/mouse_model/: button_layout.rs  geometry.rs  mod.rs  picker.rs  view.rs
crates/openlogi-gui/src/platform/: CLAUDE.md  launch_agent.rs  menubar.rs  mod.rs  permissions.rs  spawn.rs  status_item.rs  tray.rs  updater.rs
crates/openlogi-gui/src/state/: devices.rs  load.rs
crates/openlogi-gui/src/watchers/: foreground_app.rs  gesture.rs  inventory.rs  pairing.rs
crates/openlogi-gui/src/windows/: about.rs  add_device.rs  mod.rs  settings.rs  update_consent.rs
crates/openlogi-gui/themes/: openlogi.json
crates/openlogi-hid/: CHANGELOG.md  Cargo.toml  README.md
crates/openlogi-hid/src/: battery_status.rs  gesture.rs  hidden_features.rs  hires_wheel.rs  inventory.rs  keyboard.rs  lib.rs  mappings.rs  onboard_profiles.rs  pairing.rs  reprog_controls.rs  route.rs  smartshift.rs  thumbwheel.rs  transport.rs  windows_hid.rs  windows_pairing.rs  write.rs
crates/openlogi-hid/src/gesture/: tests.rs
crates/openlogi-hid/src/inventory/: cache.rs  features.rs  probe.rs  tests.rs
crates/openlogi-hid/src/pairing/: tests.rs
crates/openlogi-hid/src/reprog_controls/: event.rs
crates/openlogi-hid/src/transport/: tests.rs
crates/openlogi-hid/src/write/: diagnostics.rs  error.rs  fn_lock.rs  lighting.rs  onboard_profiles.rs  shared.rs  smartshift.rs  tests.rs
crates/openlogi-hidpp/: CHANGELOG.md  Cargo.toml  README.md
crates/openlogi-hidpp/src/: channel.rs  device.rs
crates/openlogi-hidpp/src/feature/: mod.rs  registry.rs
crates/openlogi-hidpp/src/receiver/: bolt.rs  lightspeed.rs  mod.rs  unifying.rs
crates/openlogi-hook/: CHANGELOG.md  Cargo.toml
crates/openlogi-hook/src/: lib.rs  linux.rs  macos.rs  tests.rs  windows.rs
crates/openlogi-hook/src/linux/: wlr_foreign_toplevel.rs
crates/openlogi-inject/: Cargo.toml
crates/openlogi-inject/examples/: inject_action.rs
crates/openlogi-inject/src/: inject.rs  lib.rs
crates/openlogi-inject/src/inject/: linux.rs  macos.rs  windows.rs
crates/optminus-gui/src/: app.rs
crates/optminus-gui/src/components/: dpi_panel.rs  mod.rs
docs/: CONFIGURATION.md  DEVELOPMENT.md  INSTALL-linux.md  USAGE.md
docs/mx-master-4-panel-captures/: elan-touchpad-positive-control.txt  openlogi-diag-panel-arm-confirmed.txt  openlogi-panel-confirmed-clean.txt  optionsplus-coldstart-full.txt  optionsplus-rawinput.txt  panel-analytics-stream.txt
docs/superpowers/plans/: 2026-06-29-mouse-buttons-6-9.md  2026-06-30-function-key-remapper-m1.md
docs/superpowers/specs/: 2026-06-29-mouse-buttons-6-9-design.md  2026-06-30-function-key-remapper-design.md
nix/: package.nix
packaging/aur/: PKGBUILD.tmpl  openlogi.install
packaging/linux/: install.sh  nfpm.yaml  uninstall.sh
packaging/linux/desktop/: openlogi.desktop
packaging/linux/nfpm-scripts/: postinstall.sh  preremove.sh
packaging/linux/systemd/: openlogi-agent.service
packaging/linux/udev/: 70-openlogi.rules
packaging/windows/: OpenLogi.wxs
scripts/: cargo-run-macos.sh
xtask/: README.md
xtask/src/: linux.rs  macos.rs  main.rs
xtask/src/commands/: macos.rs
xtask/src/commands/macos/: bundle.rs
(+46 files in other folders)
