[package]
name = "openlogi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLogi background agent — headless, always-on owner of the input hook, HID++ device I/O, and (later) the menu-bar tray."
# Distributed as a login-item helper inside the bundled .app; never published.
publish = false

[[bin]]
name = "openlogi-agent"
path = "src/main.rs"

[dependencies]
openlogi-agent-core = { path = "../openlogi-agent-core" }
openlogi-core = { path = "../openlogi-core" }
openlogi-hook = { path = "../openlogi-hook" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
