[package]
name = "openlogi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLogi command-line interface."

[[bin]]
name = "openlogi"
path = "src/main.rs"

[dependencies]
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
openlogi-assets = { path = "../openlogi-assets" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
