[package]
name = "openlogi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Implementation library for the OpenLogi CLI (the `openlogi` binary)."
keywords = ["logitech", "hidpp", "hid", "mouse", "cli"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
openlogi-core = { path = "../openlogi-core", version = "0.6.21" }
openlogi-hid = { path = "../openlogi-hid", version = "0.6.21" }
openlogi-assets = { path = "../openlogi-assets", version = "0.6.21" }
clap = { workspace = true }
anyhow = { workspace = true }
async-hid = { workspace = true }
futures-lite = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# RawInput tap for `diag rawinput` — the only user-mode way to observe HID
# collections the OS input stack holds exclusively (see diag/rawinput.rs).
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    # WNDCLASSW references HBRUSH, so the window-class APIs are only exposed
    # when Win32_Graphics_Gdi is also enabled.
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
