[package]
name = "openlogi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, config, and paths for OpenLogi. No I/O specifics."
keywords = ["logitech", "hidpp", "config", "mouse", "hid"]
categories = ["hardware-support", "config"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fs4 = { version = "1.1.0", features = ["sync"] }
etcetera = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", default-features = false, features = ["link", "highsierra"] }
core-foundation = { workspace = true }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent"] }
objc2-foundation = "0.3.2"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }

[lints]
workspace = true
