[package]
name = "openlogi-hid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HID++ device discovery for OpenLogi, wrapping the hidpp crate over async-hid."
keywords = ["logitech", "hidpp", "hid", "mouse", "async"]
categories = ["hardware-support", "asynchronous"]

[dependencies]
openlogi-core = { path = "../openlogi-core", version = "0.5.1" }
hidpp = { workspace = true }
async-hid = { workspace = true }
tokio = { workspace = true }
futures-lite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num_enum = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Win32_System_WinRT",
] }
windows-sys = { workspace = true, features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[lints]
workspace = true
